--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
