--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
@@ -19,6 +18,7 @@
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
