--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.16.4",
     "axios": "^1.7.7",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.11.17",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
@@ -23,6 +25,7 @@
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-toastify": "^10.0.6",
     "toastify-js": "^1.12.0"
   },
