--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-sweetalert2": "^0.6.0",
     "react-toastify": "^10.0.6",
+    "sweetalert2": "^11.14.5",
+    "sweetalert2-react-content": "^5.0.7",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
