--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scroll-parallax": "^3.4.5",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^10.0.6",
+    "react-tooltip": "^5.28.0",
     "sweetalert2": "^11.14.5",
     "sweetalert2-react-content": "^5.0.7",
     "toastify-js": "^1.12.0"
